# django-watching-storage

./: .gitignore  pyproject.toml
datacenter/: active_passcards_view.py  models.py  passcard_info_view.py  storage_information_view.py
datacenter/templates/: passcard_info.html  storage_information.html
project/: settings.py  urls.py
